# LSLAutoBIDS

./: .gitignore  .gitmodules  404.html  Makefile  README.md  autobids.sh  changelog.md  config.yaml  config_info.py  config_info.yaml  data_config.yaml  data_root_config.yaml  empty_log_file_temp.py  empty_log_process_temp.py  gen_dataset_config.py  gen_dv_config.py  gen_project_config.py  index.html  mkdocs.yaml  processed_files.txt  pyproject.toml  requirements.txt  run.py  setup.py  sitemap.xml
bids_convert_and_upload/: index.html
cli/: index.html
configuration/: index.html
contributions/: index.html
data_organization/: index.html
datalad_integration/: index.html
dataverse_integration/: index.html
developers_documentation/: index.html
docs/: about.md  bids_convert_and_upload.md  cli.md  configuration.md  contributions.md  data_organization.md  datalad_integration.md  dataverse_integration.md  developers_documentation.md  faq.md  file_processing.md  index.md  other_utils.md  testing.md  tutorial.md  usage.md
faq/: index.html
file_processing/: index.html
lsl_autobids/: Makefile  __init__.py  _test.ipynb  align.py  bids.py  config_globals.py  config_logger.py  convert_to_bids_and_upload.py  darus_config.json  datalad_create.py  dataset.json  dataset_create.py  dataverse_dataset_create.py  folder_config.py  gen_dv_config.py  gen_project_config.py  generate_dataset_json.py  globals.py  link_datalad_dataverse.py  main.py  processing.py  processing_new_files.py  upload.py  upload_to_dataverse.py  utils.py
lslautobids/: __init__.py  cli.py  main.py  (+11 more)
(+86 files in other folders)
